# zigbind

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  ZIGBIND_IMPLEMENTATION_PLAN.md  ZIG_PYTHON_TRANSLATION_RESEARCH.md  build.zig  build.zig.zon  demo.py  pyproject.toml
examples/hellozig/: build.zig  build.zig.zon  demo.py  hellozig.zig
examples/types_demo/: build.zig  build.zig.zon  demo.py  types_demo.zig
src/: errors.zig  function.zig  module.zig  python_api.zig  type_caster.zig  zigbind.zig
tests/: build.zig  build.zig.zon  conftest.py  test_containers.py  test_containers.zig  test_functions.py  test_functions.zig  test_memory_leak.py  test_memory_leak.zig
