[project]
name = "zigbind"
version = "0.1.0"
description = "High-performance Python bindings for Zig"
requires-python = ">=3.12"
authors = [
  { name = "Tudor Oancea", email = "oancea.tudor@icloud.com" }
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "ruff>=0.14.5",
]

[tool.ruff]
line-length = 150
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PT"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
# addopts = "-v"
